UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/ftr_UCFQuoteQuestionnaire__c.object-meta.xml
<CustomObject>
    <label>UCF Quote Questionnaire</label>
    <nameField>
        <label>UCF Quote Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UCF Quote Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>