UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/Analog_Devices_Attached_Ported_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Analog_Devices_Attached_Ported_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AnalogDevicesAttachedtoPortedNumbers</label>
    <type>Checkbox</type>
</CustomField>