UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/DHCP_server_available__c.field-meta.xml
<CustomField>
    <fullName>DHCP_server_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DHCP server available</label>
    <type>Checkbox</type>
</CustomField>