UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/External_Paging_Fax_Availability__c.field-meta.xml
<CustomField>
    <fullName>External_Paging_Fax_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExternalPagingFaxAvailability</label>
    <type>Checkbox</type>
</CustomField>