UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/Multiple_Auto_Attendants_Req__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Auto_Attendants_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MultipleAutoAttendantsRequirement</label>
    <type>Checkbox</type>
</CustomField>