UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UCF Quote Questionnaires</relationshipLabel>
    <relationshipName>UCF_Quote_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>