UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/TollFree_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>TollFree_Services_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TollFreeServicesRequired</label>
    <type>Checkbox</type>
</CustomField>