UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/Upstream_Bandwidth_Mbs__c.field-meta.xml
<CustomField>
    <fullName>Upstream_Bandwidth_Mbs__c</fullName>
    <label>Upstream Bandwidth Mbs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>