UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFQuoteQuestionnaire__c/fields/Vlocity_Quote__c.field-meta.xml
<CustomField>
    <fullName>Vlocity_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vlocity Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>UCF Quote Questionnaires</relationshipLabel>
    <relationshipName>UCF_Quote_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>